[package]
name = "hl7conv2"
version = "0.2.1"
edition = "2021"
authors = ["Ilya Kalosha <kalosha.ilya@yandex.com>"]
description = "A high-performance HL7 to JSON converter written in Rust with Python bindings"
license = "MIT"
repository = "https://github.com/IlyaKalosha/hl7conv2"
homepage = "https://github.com/IlyaKalosha/hl7conv2"
documentation = "https://docs.rs/hl7conv2"
keywords = ["hl7", "healthcare", "json", "converter", "medical"]
categories = ["encoding", "parser-implementations", "web-programming::http-server"]
readme = "README.md"

[lib]
name = "hl7conv2"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
proptest = "1.4"

[features]
default = ["validation"]
validation = []
streaming = []
